Begin working auth
